<resources>
    <string name="title_activity_splashscreen">splashscreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome_protect_child_rights">welcome! Protect your Rights</string>
    <string name="title_activity_settings">settings</string>
    <string name="title_activity_authontication">Authontication</string>
    <string name="title_activity_report">report</string>
    <string name="title_activity_search_stations">searchStations</string>
    <string name="title_activity_laws_and_rights">Laws_And_Rights</string>
    <string name="app_name">Report Crime</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="greeting_text">Hello, Uganda</string>
    <string name="search_hint">Search Station</string>
    <string name="report_crime">Report Crime</string>
    <string name="get_help">Get Help</string>
    <string name="lost_and_found">Lost and Found</string>
    <string name="missing_persons">Missing Persons</string>
    <string name="search_station">Search Station</string>
    <string name="constitutional_laws">Constitutional Laws</string>
    <string name="more_info">More Information and External Links</string>
    <string name="more_info_button">More Info</string>
    <string name="external_links_button">External Links</string>
    <string name="follow_us">Follow Us</string>
    <string name="emergency_contact">For emergencies, contact local authorities or call 999.</string>

    <!-- Notification Page Strings -->
    <string name="notifications_title">Notifications</string>
    <string name="mark_read_button">Mark All as Read</string>
    <string name="clear_all_button">Clear All</string>

    <!-- Settings Page Strings -->
    <string name="settings_title">Settings</string>
    <string name="display_settings">Display Settings</string>
    <string name="high_contrast_mode">High Contrast Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="font_size">Font Size</string>
    <string name="medium">Medium</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="advanced_notification_settings">Advanced Notification Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="login_to_account">Login to Account</string>
    <string name="share_location">Share Location Data</string>
    <string name="language_region">Language &amp; Region</string>
    <string name="select_language">Select Language</string>
    <string name="general">General</string>
    <string name="share_app">Share App</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="save_changes">Save Changes</string>
    <string name="back">Back</string>

    <!-- Navigation Drawer Strings -->
    <string name="nav_user_name">User Name</string>
    <string name="nav_user_email">user@example.com</string>

    <!-- Content Descriptions for Accessibility -->
    <string name="app_logo">App Logo</string>
    <string name="call">Call</string>
    <string name="notifications">Notifications</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">YouTube</string>
    <string name="title_activity_notification">notification</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_get_help">GetHelp</string>
    <string name="title_activity_lost_and_found">Lost_and_found</string>
    <string name="title_activity_setting">Setting</string>
    <string name="notification_message_here">Notification message here</string>
    <string name="title_activity_authentication">authentication</string>
    <string name="open_navigation_drawer">open drawer\n</string>
    <string name="title_activity_splash_screen">welocome\n</string>
    <string name="forgot_password_button">Forgot Password?</string>
    <string name="login_button_text">Login</string>
    <string name="signup_link_text">Don\'t have an account? Sign up here</string>
    <string-array name="crime_type_options"><item>
           <string name="notifications_title">Notifications</string>
    <string name="mark_read_button">Mark All as Read</string>
    <string name="clear_all_button">Clear All</string>
    <string name="dummy_content">Dummy Content</string>
    <string name="dummy_button">Dummy Button</string>
            <string name="notifications_title">Notifications</string>
    <string name="mark_read_button">Mark All as Read</string>
    <string name="clear_all_button">Clear All</string>
    <string name="dummy_content">Dummy Content</string>
    <string name="dummy_button">Dummy Button</string>
        Select crime type</item>
        <item>Theft</item>
        <item>
        Assault</item>
        <item>Vandalism</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_splash">splash</string>

</resources>